--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,10 +42,26 @@ jobs:
     # Run publish job it's a tag push starting with v or test
     # Use v* tags (e.g., v1.0.0) for PyPI releases (must be on master branch)
     # Use test* tags (e.g., test1.0.0) for TestPyPI releases
-    if: (startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/tags/test'))
+    # if: (startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/tags/test'))
     
     steps:
+    - name: Debug
+      run: |
+        echo "github.ref = ${{ github.ref }}"
+        echo "github.event_name = ${{ github.event_name }}"
+        echo "github.sha = ${{ github.sha }}"
+        echo "github.base_ref = ${{ github.base_ref }}"
+    
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Get all history for branch checking
+        
+    - name: Check if on master
+      run: |
+        if [[ "$(git branch --contains ${{ github.sha }}) " != *" master "* ]]; then
+          echo "Not on master branch"
+          exit 1
+        fi
     
     - name: Set up Python
       uses: actions/setup-python@v4
