Fixed issue #45 by addressing how logomaker was handling paths

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
-include README.rst
+include README.md
 include LICENSE
-recursive-include logomaker/src *
+recursive-include logomaker *.py
 recursive-include logomaker/data *
 recursive-include logomaker/jupyter_notebooks *
 recursive-include logomaker/tests *
