Change test system to provide support for pytest
-Tests are now defined by lists of tuples in define_tests.py
-These lists are used in an altered test_functional_tests_lofomaker.py

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,7 +39,8 @@ jobs:
 
     - name: Run tests
       run: |
-        python -c "import logomaker; logomaker.run_tests()"
+        python -c "import logomaker"
+        pytest -v logomaker/tests/functional_tests_logomaker.py
 
   
         
