Update workflow.yml to properly mark test releases on GitHub as preleases

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -174,10 +174,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: >-
-          gh release create
-          "$GITHUB_REF_NAME"
-          --repo "$GITHUB_REPOSITORY"
-          --notes ""
+          if [[ "$GITHUB_REF_NAME" == test* ]]; then
+            gh release create "$GITHUB_REF_NAME" \
+              --repo "$GITHUB_REPOSITORY" \
+              --notes "" \
+              --prerelease
+          elif [[ "$GITHUB_REF_NAME" == v* ]]; then
+            gh release create "$GITHUB_REF_NAME" \
+              --repo "$GITHUB_REPOSITORY" \
+              --notes ""
+          fi
       - name: Upload artifact signatures to GitHub Release
         env:
           GITHUB_TOKEN: ${{ github.token }}
