Add cross-platform implementation of matplotlib backend to prevent test failure

--- a/.github/workflows/daily-tests.yml
+++ b/.github/workflows/daily-tests.yml
@@ -33,8 +33,9 @@ jobs:
 
       - name: Configure matplotlib backend
         run: |
-          mkdir -p $HOME/.config/matplotlib
-          echo "backend: Agg" > $HOME/.config/matplotlib/matplotlibrc
+          python -c "import matplotlib; matplotlib.use('Agg')"
+        env:
+          MPLBACKEND: Agg
 
       - name: Test build
         run: |
@@ -45,8 +46,10 @@ jobs:
       - name: Run tests
         run: |
           pip install logomaker
-          python -c "import logomaker"
+          python -c "import matplotlib; matplotlib.use('Agg'); import logomaker"
           pytest -v --cov-report term-missing --cov=logomaker
+        env:
+          MPLBACKEND: Agg
   notify:
     name: Send email notification
     needs: test
